Fix previously introduced bug

--- a/roles/workstation/tasks/gui_tools.yml
+++ b/roles/workstation/tasks/gui_tools.yml
@@ -1,7 +1,8 @@
 - name: Install GUI tools
   apt:
-    - dconf-editor
-    - terminator
+    name:
+      - dconf-editor
+      - terminator
   become: true
 
 - name: Install skype
