--- a/roles/workstation/tasks/google_chrome.yml
+++ b/roles/workstation/tasks/google_chrome.yml
@@ -1,5 +1,7 @@
 - name: "apt | ensure Google linux signing key present"
-  apt_key: url=https://dl-ssl.google.com/linux/linux_signing_key.pub state=present
+  apt_key:
+    id: 4CCA1EAF950CEE4AB83976DCA040830F7FAC5991
+    url: https://dl-ssl.google.com/linux/linux_signing_key.pub
   become: true
 
 - name: "apt | ensure Google chrome repo present"
