--- a/roles/workstation/tasks/cloud_tools.yml
+++ b/roles/workstation/tasks/cloud_tools.yml
@@ -1,6 +1,8 @@
 - name: Install google-cloud-sdk
   become: true
   command: snap install google-cloud-sdk --classic creates=/snap/bin/gcloud
+  tags:
+    - snap
 
 - name: Install rclone
   become: true
