--- a/roles/workstation/tasks/dictionaries.yml
+++ b/roles/workstation/tasks/dictionaries.yml
@@ -1,13 +1,9 @@
 - name: Install dictionaries
   apt:
-    name: "{{ packages }}"
-  vars:
-    packages:
+    name:
       - hunspell-de-de
       - hunspell-en-gb
       - hunspell-fr
       - hunspell-ro
       - hunspell-sv
   become: true
-  tags:
-    - wsl
