Fix: install imagemagick

--- a/roles/workstation/tasks/gui_tools.yml
+++ b/roles/workstation/tasks/gui_tools.yml
@@ -54,6 +54,12 @@
     pkg:
       - openscad
 
+- name: Install ImageMagick
+  become: true
+  apt:
+    pkg:
+      - imagemagick
+
 - name: Allow ImageMagick to rasterize PDFs
   become: true
   lineinfile:
