Do not require GitHub auth

--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -97,4 +97,4 @@ gpgkeys:
     =TqQP
     -----END PGP PUBLIC KEY BLOCK-----
 repos:
-  vimrc: git@github.com:cristiklein/vimrc.git
+  vimrc: https://github.com/cristiklein/vimrc.git
