--- a/roles/cklein.cncf/defaults/main.yaml
+++ b/roles/cklein.cncf/defaults/main.yaml
@@ -3,5 +3,6 @@ helm_version: v3.0.2
 kubectl_version: v1.13.0
 kubectx_version: v0.7.1
 kubens_version: v0.7.1
+krew_version: v0.3.3
 
 terraform_version: 0.12.19
