--- a/roles/cklein.cncf/tasks/main.yaml
+++ b/roles/cklein.cncf/tasks/main.yaml
@@ -8,6 +8,19 @@
     - https://raw.githubusercontent.com/ahmetb/kubectx/{{ kubens_version }}/kubens
     - https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubectl
 
+- name: Install krew
+  shell: |
+    (
+      set -x; cd "$(mktemp -d)" &&
+      curl -fsSLO "https://github.com/kubernetes-sigs/krew/releases/download/{{ krew_version }}/krew.{tar.gz,yaml}" &&
+      tar zxvf krew.tar.gz &&
+      KREW=./krew-"$(uname | tr '[:upper:]' '[:lower:]')_amd64" &&
+      "$KREW" install --manifest=krew.yaml --archive=krew.tar.gz &&
+      "$KREW" update
+    )
+  args:
+    creates: ~/.krew/bin
+
 - name: Install helm
   unarchive:
     src: https://get.helm.sh/helm-{{ helm_version }}-linux-amd64.tar.gz
