--- a/roles/cklein.cncf/meta/main.yaml
+++ b/roles/cklein.cncf/meta/main.yaml
@@ -1,4 +1,5 @@
 dependencies:
-  - role: cklein.curl
+  - role: cklein.curl  # for krew
   - role: cklein.homebin
+  - role: cklein.git  # for krew
   - role: cklein.unzip
