Fix testing each role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,3 +9,4 @@ callback_whitelist = profile_tasks
 stdout_callback = debug
 local_tmp = /tmp/.ansible/tmp
 remote_tmp = /tmp/.ansible/tmp
+roles_path = ./roles
