--- a/site.yml
+++ b/site.yml
@@ -14,6 +14,7 @@
     - cklein.security
     - cklein.shell
     - cklein.vscode
+    - cklein.vim
     - workstation
 
     # Leave as last for proper cleanup
