Factor out cklein.admin_tools

--- a/site.yml
+++ b/site.yml
@@ -8,6 +8,7 @@
       executable: pip3
       extra_args: --user
   roles:
+    - cklein.admin_tools
     - cklein.cncf
     - cklein.git
     - cklein.remote_unlock_encrypted_volume
