--- a/roles/cklein.admin_tools/tasks/main.yaml
+++ b/roles/cklein.admin_tools/tasks/main.yaml
@@ -1,11 +1,18 @@
 - name: Install admin tools
+  become: true
   apt:
     name:
+      - curl
       - htop
       - inotify-tools
-      - iotop
       - iperf
+      - iotop
+      - jq
+      - mc
+      - moreutils
       - net-tools
+      - pv
       - screen
+      - tcptrack
       - uuid
-  become: true
+      - zip
