--- a/roles/cklein.zz_cleanup/tasks/main.yaml
+++ b/roles/cklein.zz_cleanup/tasks/main.yaml
@@ -6,6 +6,26 @@
     state: absent
     purge: true
 
+- name: Update apt package
+  become: true
+  apt:
+    update_cache: yes
+    upgrade: yes
+  tags: update
+
+- name: Update pip3 user packages
+  shell: |
+    #!/bin/bash
+    OUTDATED_PACKAGES=$(pip3 list --outdated --user --format=freeze | sed -ne 's/==.*//p')
+    if [ -z "$OUTDATED_PACKAGES" ]; then
+      echo "No outdated packages"
+    else
+      echo $OUTDATED_PACKAGES | xargs pip3 install --user --upgrade --
+    fi
+  register: pip3_update
+  changed_when: '"No outdated packages" not in pip3_update.stdout'
+  tags: update
+
 - name: Remove useless packages from the cache
   apt:
     autoclean: yes
