--- a/roles/cklein.go/tasks/main.yml
+++ b/roles/cklein.go/tasks/main.yml
@@ -8,6 +8,7 @@
 
 - name: Install golangci-lint
   shell: |
+    export PATH=/usr/local/go/bin:$PATH
     curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin {{ golangci_lint_version }}
   args:
     creates: ~/go/bin/golangci-lint
