Switch to keepassxc

--- a/roles/cklein.security/tasks/main.yaml
+++ b/roles/cklein.security/tasks/main.yaml
@@ -3,7 +3,7 @@
     name:
     - gnupg2
     - gnupg-agent
-    - keepassx
+    - keepassxc
     - passwordmaker-cli # legacy, new passwords are on keepassx
     - pcscd
     - pinentry-curses
