--- a/roles/cklein.gnome_favorite_apps/defaults/main.yaml
+++ b/roles/cklein.gnome_favorite_apps/defaults/main.yaml
@@ -7,4 +7,4 @@ gnome_favorite_apps:
   - libreoffice-calc.desktop
   - libreoffice-impress.desktop
   - spotify_spotify.desktop
-  - keepassx.desktop
+  - org.keepassxc.KeePassXC.desktop
