--- a/roles/cklein.security/tasks/main.yaml
+++ b/roles/cklein.security/tasks/main.yaml
@@ -1,3 +1,8 @@
+- name: Install KeePassXC PPA
+  become: true
+  apt_repository:
+    repo: ppa:phoerious/keepassxc
+
 - name: Install security tools
   apt:
     name:
