Fix build failure

--- a/roles/workstation/tasks/google_chrome_elastisys.yml
+++ b/roles/workstation/tasks/google_chrome_elastisys.yml
@@ -22,3 +22,4 @@
     src: ~/.config/google-chrome/NativeMessagingHosts/org.keepassxc.keepassxc_browser.json
     dest: ~/.config/google-chrome-elastisys/NativeMessagingHosts/org.keepassxc.keepassxc_browser.json
     state: link
+    force: yes
