--- a/roles/workstation/tasks/docker.yml
+++ b/roles/workstation/tasks/docker.yml
@@ -16,7 +16,7 @@
 - name: Add Docker repository
   become: true
   apt_repository:
-    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
 
 - name: Install Docker
   become: true
