--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -104,3 +104,7 @@ gnome_favorite_apps:
   - chrome-elastisys.desktop
   - spotify_spotify.desktop
   - org.keepassxc.KeePassXC.desktop
+signature: |
+  Cristian Klein, PhD
+  Cloud Expert
+  www.elastisys.com
