--- a/site.yml
+++ b/site.yml
@@ -15,6 +15,7 @@
     - cklein.git
     - cklein.go
     - cklein.minikube
+    - cklein.mutt
     - cklein.python
     - cklein.remote_unlock_encrypted_volume
     - cklein.security
