--- a/roles/cklein.c/tasks/main.yaml
+++ b/roles/cklein.c/tasks/main.yaml
@@ -11,6 +11,14 @@
   tags:
     - c
 
+- name: Create configuration folders
+  file:
+    path: ~/.ccache
+    state: directory
+    recurse: true
+  tags:
+    - c
+
 - name: Copy configuration files
   template:
     src: '{{ item | basename | regex_replace("^[.]") }}.j2'
