--- a/site.yml
+++ b/site.yml
@@ -19,6 +19,7 @@
     - cklein.go
     - cklein.minikube
     - cklein.mutt
+    - cklein.mplayer
     - cklein.nodejs
     - cklein.python
     - cklein.remote_unlock_encrypted_volume
