--- a/roles/cklein.go/tasks/main.yml
+++ b/roles/cklein.go/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: Ensure /usr/local exists
+  become: true
+  file:
+    path: /usr/local
+    state: directory
+
 - name: Install Go
   become: true
   unarchive:
