Refactor terminator role

--- a/site.yml
+++ b/site.yml
@@ -25,6 +25,7 @@
     - cklein.remote_unlock_encrypted_volume
     - cklein.security
     - cklein.shell
+    - cklein.terminator
     - cklein.vscode
     - cklein.vim
     - cklein.zoom
