--- a/roles/cklein.default_apps/tasks/main.yaml
+++ b/roles/cklein.default_apps/tasks/main.yaml
@@ -1,4 +1,4 @@
 - name: Configure default apps
   template:
     src: mimeapps.list.j2
-    dest: ~/.mimeapps.list
+    dest: ~/.config/mimeapps.list
