--- a/site.yml
+++ b/site.yml
@@ -22,6 +22,7 @@
     - cklein.dropbox
     - cklein.git
     - cklein.go
+    - cklein.jekyll
     - cklein.minikube
     - cklein.mutt
     - cklein.mplayer
