--- a/roles/cklein.cncf/tasks/main.yaml
+++ b/roles/cklein.cncf/tasks/main.yaml
@@ -38,3 +38,8 @@
     dest: ~/bin
     creates: ~/bin/terraform
     remote_src: yes
+
+- name: Install sops
+  become: true
+  apt:
+    deb: https://github.com/mozilla/sops/releases/download/v{{ sops_version }}/sops_{{ sops_version }}_amd64.deb
