--- a/roles/cklein.cncf/defaults/main.yaml
+++ b/roles/cklein.cncf/defaults/main.yaml
@@ -1,9 +1,9 @@
-helm_version: v3.0.2
+helm_version: 3.3.4
 
-kubectl_version: v1.13.0
-kubectx_version: v0.7.1
-kubens_version: v0.7.1
-krew_version: v0.3.3
+kubectl_version: 1.19.3
+kubectx_version: 0.7.1
+kubens_version: 0.7.1
+krew_version: 0.3.3
 
 terraform_version: 0.12.19
 
