Carve out ImageMagick

--- a/site.yml
+++ b/site.yml
@@ -23,6 +23,7 @@
     - cklein.git
     - cklein.go
     - cklein.hugo
+    - cklein.imagemagick
     - cklein.minikube
     - cklein.mutt
     - cklein.mplayer
