Carve out CAD tools

--- a/site.yml
+++ b/site.yml
@@ -13,6 +13,7 @@
 
     - cklein.admin_tools
     - cklein.c
+    - cklein.cad
     - cklein.cloud_tools
     - cklein.cncf
     - cklein.default_apps
