--- a/roles/cklein.shell/tasks/main.yaml
+++ b/roles/cklein.shell/tasks/main.yaml
@@ -7,6 +7,7 @@
     - bash_aliases
     - bash_completion
     - bash_logout
+    - inputrc
     - profile
 
 - name: Remove unnecessary shell configuration files
