--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ ansible_managed=DO NOT EDIT! This file is managed by Ansible.%n
   user: {uid}
   host: {host}
 ansible_python_interpreter=/usr/bin/python3
-callback_whitelist = profile_tasks
+callback_enabled = profile_tasks
 stdout_callback = debug
 local_tmp = /tmp/.ansible/tmp
 remote_tmp = /tmp/.ansible/tmp
