--- a/roles/cklein.git/tasks/main.yaml
+++ b/roles/cklein.git/tasks/main.yaml
@@ -25,5 +25,5 @@
 - name: Install pre-commit
   pip:
     name:
-      - pre-commit ~= 2.9
+      - pre-commit ~= {{ precommit_version_match }}
     state: latest
