fix[jammy]: cklein.security

--- a/roles/cklein.security/tasks/main.yaml
+++ b/roles/cklein.security/tasks/main.yaml
@@ -20,6 +20,7 @@
     repo: ppa:phoerious/keepassxc
   tags:
     - keepassxc
+  when: ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int <= 20
 
 - name: Install KeePassXC
   apt:
